# sift

./: .env.example  .gitignore  README.md  eval_embeddings.py  eval_title_spam.py  main.py  pyproject.toml  todo.md
docs/: pipeline.md  roadmap.md  schema.md
fumble/: assess.py  cli.py  dashboard.py  email_fetch.py  embeddings.py  extract.py  llm.py  scrape.py  store.py
resources/: profile.example.md  search-criteria.example.md  sources.toml
sift/: dashboard.py
tests/: test_email_fetch.py  test_pipeline.py  test_scrape.py  test_store.py
