[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fumble"
version = "0.1.0"
description = "Dating-app-style job listing screener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "curl-cffi>=0.14.0",
    "google-genai>=1.68.0",
    "imapclient>=3.1.0",
    "ollama>=0.4",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fumblebee = "fumble.cli:main"
fumble = "fumble.dashboard_cli:main"
